--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                 transition:
                     transform 0.3s ease,
                     box-shadow 0.3s ease;
+                margin: 0px 10px;
+                scroll: disable;
             }
 
             img {
@@ -64,7 +66,6 @@
                 gap: 8px;
                 flex-wrap: wrap;
                 justify-content: center;
-                cursor: pointer;
             }
 
             .skill {
@@ -74,6 +75,8 @@
                 font-size: 14px;
                 font-weight: 600;
                 transition: all 0.3s ease;
+                cursor: pointer;
+                outline: none;
             }
 
             .skills a {
@@ -103,24 +106,6 @@
 
             .links a:hover {
                 transform: scale(1.2);
-            }
-
-            @media (max-width: 500px) {
-                img {
-                    width: 100px;
-                    height: 100px;
-                }
-                h1 {
-                    font-size: 20px;
-                }
-                p.subtitle,
-                p.about {
-                    font-size: 13px;
-                }
-                .skill {
-                    font-size: 11px;
-                    padding: 4px 8px;
-                }
             }
         </style>
     </head>
@@ -165,6 +150,16 @@
                         title="GitHub"
                     >
                         DuckBug
+                    </a>
+                </span>
+                <span class="skill">
+                    <a
+                        href="https://qr.korotkovs.com/
+"
+                        target="_blank"
+                        title="GitHub"
+                    >
+                        QR Gen
                     </a>
                 </span>
             </div>
