--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
             }
 
             .card {
-                background: #2628301f;
                 border-radius: 15px;
                 padding: 30px 20px;
-                box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+                -webkit-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
+                -moz-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
+                box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
                 max-width: 400px;
                 width: 90%;
                 display: flex;
@@ -32,7 +33,6 @@
                     transform 0.3s ease,
                     box-shadow 0.3s ease;
                 margin: 0px 10px;
-                scroll: disable;
             }
 
             img {
