--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h1>Привет, я Александр Коротков</h1>
 
             <p class="about">
-                Профисионально занимаюсь <b>React-Native</b> разработкой.
+                Профессионально занимаюсь <b>React-Native</b> разработкой.
             </p>
 
             <div class="skills">
